# cddl-cat

./: .Cargo.lock.msrv  Cargo.toml  Cranky.toml  LICENSE  README.md  tarpaulin.toml
.circleci/: config.yml
.github/workflows/: build.yml  build_features.yml
src/: ast.rs  cbor.rs  context.rs  flatten.rs  generic.rs  ivt.rs  json.rs  lib.rs  normalize.rs  parser.rs  util.rs  validate.rs  value.rs
src/parser/: mod.rs  parse_err.rs
tests/: cbor_cddl.rs  cbor_ivt.rs  cbor_tests.rs  errors.rs  json_cddl.rs  recurse.rs
