[package]
name = "cddl-cat"
description = "Parse CDDL schemas and validate CBOR or JSON serialized data"
keywords = ["cddl", "cbor", "json"]
categories = ["encoding", "network-programming", "parser-implementations"]
version = "0.4.0"
repository = "https://github.com/ericseppanen/cddl-cat"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"

[features]
default = ["serde_json", "serde_cbor"]

[dependencies]
float-ord = "0.2"
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
serde = "1.0"
# nom's default-features are ["std", "lexical"].
nom = { version = "5.1", features = ["std"], default-features = false }
# We don't use this directly, but memchr 2.4.0 breaks our msrv,
# and it's a dependency of nom 5.1.2.
memchr = "=2.3.4"

hex = "0.4"
rustversion = "1.0"
strum_macros = "0.20"
escape8259 = "0.5"
base64 = "0.13"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
ntest = "0.7"

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "release {{version}}"
