[package]
name = "cddl-cat"
description = "Parse CDDL schemas and validate CBOR or JSON serialized data"
keywords = ["cddl", "cbor", "json"]
categories = ["encoding", "network-programming", "parser-implementations"]
version = "0.5.0"
repository = "https://github.com/ericseppanen/cddl-cat"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"
rust-version = "1.48"

[features]
default = ["serde_json", "serde_cbor"]

[dependencies]
float-ord = "0.3"
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
serde = "1.0"
# nom's default-features are ["std", "lexical"].
nom = { version = "7", features = ["std"], default-features = false }
hex = "0.4"
strum_macros = "0.23.1"
escape8259 = "0.5"
base64 = "0.13"
thiserror = "1.0"
regex = "1.5.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
ntest = "0.7"

[package.metadata.release]
dev-version = false
pre-release-commit-message = "release {{version}}"
