[package]
name = "cddl-cat"
description = "Parse CDDL schemas and validate CBOR or JSON serialized data"
keywords = ["cddl", "cbor", "json"]
categories = ["encoding", "network-programming", "parser-implementations"]
version = "0.6.2"
repository = "https://github.com/ericseppanen/cddl-cat"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"
rust-version = "1.48"

[features]
default = ["serde_json", "ciborium"]

[dependencies]
float-ord = "0.3.0"
ciborium = { version = "0.2.2", optional = true }
serde_json = { version = "1.0.0", optional = true }
serde = "1.0.97"
# nom's default-features are ["std", "lexical"].
nom = { version = "7.0.0", features = ["std"], default-features = false }
hex = "0.4.0"
strum_macros = "0.23.1"
escape8259 = "0.5.0"
base64 = "0.13.0"
thiserror = "1.0.8"
regex = "1.5.5"

[dev-dependencies]
serde = { version = "1.0.97", features = ["derive"] }
ntest = "0.7.1"

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
